[package]
name = "mt-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
url = "2"
reqwest = { version = "0.12", features = ["stream"] }
indicatif = "0.17"
futures-util = "0.3"